# YARP2-codegen

./: .gitignore  Cargo.toml  README.md  data.csv  data.yml
src/: codegen.rs  codegen_template.liquid  csv_processor.rs  main.rs  records.rs  yarp_data.rs  yarp_meta.rs
